CORE-515 - Fixed horizontal container item alignment on smaller screens

--- a/css/containers.less
+++ b/css/containers.less
@@ -72,3 +72,15 @@ body {
 
 }
 
+@media(max-width: 768px) {
+
+    .mw-bs {
+
+        .mw-horizontal_flow > * {
+            padding-left: 0;
+        }
+
+    }
+
+}
+
